app/deployments/deployment.yaml
apiVersion: v1 
kind: Namespace 
metadata: 
  name:  dpt
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: flask 
  namespace: dpt  
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      role: demo 
  template: 
    metadata: 
      labels: 
        name: flask
        role: demo 
    spec: 
      containers: 
      - name: flask 
        image: docker.pkg.github.com/tallmanbrew/docker-package-testing/dpt:latest 
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
        volumeMounts:
          - name: smb01
            mountPath: "/mnt/fileshare"
      imagePullSecrets:
      - name: github
      volumes:
        - name: smb01
          persistentVolumeClaim:
              claimName: pvc-smb
---
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    name: flask
  namespace: dpt
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: flask
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask
  labels:
    name: flask
  namespace: dpt
spec:
  rules:
  - host: flask-demo.apps.tallman.family
    http:
      paths:
      - backend:
          serviceName: flask
          servicePort: 80
